5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1747_3096.log
== TEST (2019-05-16 11:16:42) 
-- CODE:
k = int(input("qual a posição do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	elif(k == 2):
		soma = soma + 15
		pontos = pontos + 1
	elif(k == 3):
		soma = soma + 10
		pontos = pontos + 1
	elif(k>= 4 and k<=11):
		soma = 11 - k
		pontos = pontos + 1
print(soma)
-- ERROR:
File "XXXX", line 15
    (t == E)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:17:24) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	elif(k == 2):
		soma = soma + 15
		pontos = pontos + 1
	elif(k == 3):
		soma = soma + 10
		pontos = pontos + 1
	elif(k>= 4 and k<=11):
		soma = 11 - k
		pontos = pontos + 1
print(soma)
-- ERROR:
File "XXXX", line 15
    (t == E)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:17:38) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	elif(k == 2):
		soma = soma + 15
		pontos = pontos + 1
	elif(k == 3):
		soma = soma + 10
		pontos = pontos + 1
	elif(k>= 4 and k<=11):
		soma = 11 - k
		pontos = pontos + 1
print(soma)
-- ERROR:
File "XXXX", line 15
    (t == E)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:19:29) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k>0 and k<11):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	elif(k == 2):
		soma = soma + 15
		pontos = pontos + 1
	elif(k == 3):
		soma = soma + 10
		pontos = pontos + 1
	elif(k>= 4 and k<=11):
		soma = 11 - k
		pontos = pontos + 1
print(soma)
-- ERROR:
File "XXXX", line 15
    (t == E)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:19:38) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k>0 and k<11):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	elif(k == 2):
		soma = soma + 15
		pontos = pontos + 1
	elif(k == 3):
		soma = soma + 10
		pontos = pontos + 1
	elif(k>= 4 and k<=11):
		soma = 11 - k
		pontos = pontos + 1
print(soma)
-- ERROR:
File "XXXX", line 15
    (t == E)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:22:28) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	while(k!=0):
	k = int(input("qual a posicao do jogador"))
	elif(k == 2):
		soma = soma + 15
		pontos = pontos + 1
	elif(k == 3):
		soma = soma + 10
		pontos = pontos + 1
	elif(k>= 4 and k<=11):
		soma = 11 - k
		pontos = pontos + 1
print(soma)
-- ERROR:
File "XXXX", line 9
    k = int(input())
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:22:50) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador"))
	elif(k == 2):
		soma = soma + 15
		pontos = pontos + 1
	elif(k == 3):
		soma = soma + 10
		pontos = pontos + 1
	elif(k>= 4 and k<=11):
		soma = 11 - k
		pontos = pontos + 1
print(soma)
-- ERROR:
File "XXXX", line 10
    elif(k == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:23:03) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador"))
		if(k == 2):
		soma = soma + 15
		pontos = pontos + 1
	elif(k == 3):
		soma = soma + 10
		pontos = pontos + 1
	elif(k>= 4 and k<=11):
		soma = 11 - k
		pontos = pontos + 1
print(soma)
-- ERROR:
File "XXXX", line 11
    soma = soma + 15
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:23:22) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador"))
		if(k == 2):
			soma = soma + 15
			pontos = pontos + 1
		elif(k == 3):
			soma = soma + 10
			pontos = pontos + 1
		elif(k>= 4 and k<=11):
			soma = 11 - k
			pontos = pontos + 1
print(soma)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:23:52) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador"))
		if(k == 2):
			soma = soma + 15
			pontos = pontos + 1
		elif(k == 3):
			soma = soma + 10
			pontos = pontos + 1
		elif(k>= 4 and k<=11):
			soma = 11 - k
			pontos = pontos + 1
print(soma)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:24:03) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador"))
		if(k == 2):
			soma = soma + 15
			pontos = pontos + 1
		elif(k == 3):
			soma = soma + 10
			pontos = pontos + 1
		elif(k>= 4 and k<=11):
			soma = 11 - k
			pontos = pontos + 1
print(soma)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:26:30) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador: "))
		if(k == 2):
			soma = soma + 15
			pontos = pontos + 1
		while(k!=0):
			k = int(input("qual a posicao do jogador: "))
			if(k == 3):
				soma = soma + 10
				pontos = pontos + 1
		while(k!=0):	
			k = int(input("qual a posicao do jogador: "))
			if(k>= 4 and k<=11):
				soma = 11 - k
				pontos = pontos + 1
print(soma)
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:27:04) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador: "))
		if(k == 2):
			soma = soma + 15
			pontos = pontos + 1
		while(k!=0):
			k = int(input("qual a posicao do jogador: "))
			if(k == 3):
				soma = soma + 10
				pontos = pontos + 1
		while(k!=0):	
			k = int(input("qual a posicao do jogador: "))
			if(k>= 4 and k<=11):
				soma = 11 - k
				pontos = pontos + 1
print(soma)
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:27:09) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador: "))
		if(k == 2):
			soma = soma + 15
			pontos = pontos + 1
		while(k!=0):
			k = int(input("qual a posicao do jogador: "))
			if(k == 3):
				soma = soma + 10
				pontos = pontos + 1
		while(k!=0):	
			k = int(input("qual a posicao do jogador: "))
			if(k>= 4 and k<=11):
				soma = 11 - k
				pontos = pontos + 1
print(soma)
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:27:17) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador: "))
		if(k == 2):
			soma = soma + 15
			pontos = pontos + 1
		while(k!=0):
			k = int(input("qual a posicao do jogador: "))
			if(k == 3):
				soma = soma + 10
				pontos = pontos + 1
		while(k!=0):	
			k = int(input("qual a posicao do jogador: "))
			if(k>= 4 and k<=11):
				soma = 11 - k
				pontos = pontos + 1
print(soma)
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:27:35) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador: "))
		if(k == 2):
			soma = soma + 15
			pontos = pontos + 1
		while(k!=0):
			k = int(input("qual a posicao do jogador: "))
			if(k == 3):
				soma = soma + 10
				pontos = pontos + 1
		while(k!=0):	
			k = int(input("qual a posicao do jogador: "))
			if(k>= 4 and k<=11):
				soma = 11 - k
				pontos = pontos + 1
print(soma)
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:27:42) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador: "))
		if(k == 2):
			soma = soma + 15
			pontos = pontos + 1
		while(k!=0):
			k = int(input("qual a posicao do jogador: "))
			if(k == 3):
				soma = soma + 10
				pontos = pontos + 1
		while(k!=0):	
			k = int(input("qual a posicao do jogador: "))
			if(k>= 4 and k<=11):
				soma = 11 - k
				pontos = pontos + 1
print(soma)
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:27:58) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador: "))
		if(k == 2):
			soma = soma + 15
			pontos = pontos + 1
		while(k!=0):
			k = int(input("qual a posicao do jogador: "))
			if(k == 3):
				soma = soma + 10
				pontos = pontos + 1
		while(k!=0):	
			k = int(input("qual a posicao do jogador: "))
			if(k>= 4 and k<=11):
				soma = 11 - k
				pontos = pontos + 1
print(soma)
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:28:10) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador: "))
		if(k == 2):
			soma = soma + 15
			pontos = pontos + 1
		while(k!=0):
			k = int(input("qual a posicao do jogador: "))
			if(k == 3):
				soma = soma + 10
				pontos = pontos + 1
		while(k!=0):	
			k = int(input("qual a posicao do jogador: "))
			if(k>= 4 and k<=11):
				soma = 11 - k
				pontos = pontos + 1
print(soma)
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:28:29) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador: "))
		if(k == 2):
			soma = soma + 15
			pontos = pontos + 1
		while(k!=0):
			k = int(input("qual a posicao do jogador: "))
			if(k == 3):
				soma = soma + 10
				pontos = pontos + 1
		while(k!=0):	
			k = int(input("qual a posicao do jogador: "))
			if(k>= 4 and k<=11):
				soma = 11 - k
				pontos = pontos + 1
print(soma)
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:29:07) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador: "))
		if(k == 2):
			soma = soma + 15
			pontos = pontos + 1
		while(k!=0):
			k = int(input("qual a posicao do jogador: "))
			if(k == 3):
				soma = soma + 10
				pontos = pontos + 1
		while(k!=0):	
			k = int(input("qual a posicao do jogador: "))
			if(k>= 4 and k<=11):
				soma = soma + (11 - k)
				pontos = pontos + 1
print(soma)
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:29:12) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador: "))
		if(k == 2):
			soma = soma + 15
			pontos = pontos + 1
		while(k!=0):
			k = int(input("qual a posicao do jogador: "))
			if(k == 3):
				soma = soma + 10
				pontos = pontos + 1
		while(k!=0):	
			k = int(input("qual a posicao do jogador: "))
			if(k>= 4 and k<=11):
				soma = soma + (11 - k)
				pontos = pontos + 1
print(soma)
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:29:56) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador: "))
		if(k == 2):
			soma = soma + 15
			pontos = pontos + 1
		while(k!=0):
			k = int(input("qual a posicao do jogador: "))
			if(k == 3):
				soma = soma + 10
				pontos = pontos + 1
		while(k!=0):	
			k = int(input("qual a posicao do jogador: "))
			if(k>= 4 and k<=11):
				soma = soma + (11 - k)
				pontos = pontos + 1
print(soma)
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:31:45) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
while(k!=0):
	k = int(input("qual a posicao do jogador: "))
	if(k == 2):
		soma = soma + 15
		pontos = pontos + 1
while(k!=0):
	k = int(input("qual a posicao do jogador: "))
	if(k == 3):
		soma = soma + 10
		pontos = pontos + 1
while(k!=0):	
	k = int(input("qual a posicao do jogador: "))
	if(k>= 4 and k<=11):
		soma = soma + (11 - k)
		pontos = pontos + 1
print(soma)
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:31:54) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
while(k!=0):
	k = int(input("qual a posicao do jogador: "))
	if(k == 2):
		soma = soma + 15
		pontos = pontos + 1
while(k!=0):
	k = int(input("qual a posicao do jogador: "))
	if(k == 3):
		soma = soma + 10
		pontos = pontos + 1
while(k!=0):	
	k = int(input("qual a posicao do jogador: "))
	if(k>= 4 and k<=11):
		soma = soma + (11 - k)
		pontos = pontos + 1
print(soma)
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:33:15) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador: "))
		if(k == 2):
			soma = soma + 15
			pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador: "))
		if(k == 3):
			soma = soma + 10
			pontos = pontos + 1
	while(k!=0):	
		k = int(input("qual a posicao do jogador: "))
		if(k>= 4 and k<=11):
			soma = soma + (11 - k)
			pontos = pontos + 1
print(soma)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:33:20) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador: "))
		if(k == 2):
			soma = soma + 15
			pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador: "))
		if(k == 3):
			soma = soma + 10
			pontos = pontos + 1
	while(k!=0):	
		k = int(input("qual a posicao do jogador: "))
		if(k>= 4 and k<=11):
			soma = soma + (11 - k)
			pontos = pontos + 1
print(soma)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:33:48) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador: "))
		if(k == 2):
			soma = soma + 15
			pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador: "))
		if(k == 3):
			soma = soma + 10
			pontos = pontos + 1
	while(k!=0):	
		k = int(input("qual a posicao do jogador: "))
		if(k>= 4 and k<=11):
			soma = soma + (11 - k)
			pontos = pontos + 1
print(soma)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:33:52) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador: "))
		if(k == 2):
			soma = soma + 15
			pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador: "))
		if(k == 3):
			soma = soma + 10
			pontos = pontos + 1
	while(k!=0):	
		k = int(input("qual a posicao do jogador: "))
		if(k>= 4 and k<=11):
			soma = soma + (11 - k)
			pontos = pontos + 1
print(soma)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:34:00) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador: "))
		if(k == 2):
			soma = soma + 15
			pontos = pontos + 1
	while(k!=0):
		k = int(input("qual a posicao do jogador: "))
		if(k == 3):
			soma = soma + 10
			pontos = pontos + 1
	while(k!=0):	
		k = int(input("qual a posicao do jogador: "))
		if(k>= 4 and k<=11):
			soma = soma + (11 - k)
			pontos = pontos + 1
print(soma)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:40:12) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	elif(k == 2):
		soma = soma + 15
		pontos = pontos + 1
	elif(k == 3):
		soma = soma + 10
		pontos = pontos + 1
	elif(k>=4 and k<=11):
		soma = soma + (11-k)
		pontos = pontos + 1
print(soma)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:40:19) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	elif(k == 2):
		soma = soma + 15
		pontos = pontos + 1
	elif(k == 3):
		soma = soma + 10
		pontos = pontos + 1
	elif(k>=4 and k<=11):
		soma = soma + (11-k)
		pontos = pontos + 1
print(soma)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:44:02) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		k = int(input("qual a posicao do jogador: ")
		soma = soma + 20
		pontos = pontos + 1
	elif(k == 2):
		k = int(input("qual a posicao do jogador")
		soma = soma + 15
		pontos = pontos + 1
	elif(k == 3):
		k = int(input("qual a posicao do jogador: ")
		soma = soma + 10
		pontos = pontos + 1
	elif(k>=4 and k<=11):
		k = int(input("qual a posicao do jogador: ")
		soma = soma + (11-k)
		pontos = pontos + 1
print(soma)
-- ERROR:
File "XXXX", line 7
    soma = soma + 20
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:44:19) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		k = int(input("qual a posicao do jogador: ")
		soma = soma + 20
		pontos = pontos + 1
	elif(k == 2):
		k = int(input("qual a posicao do jogador: ")
		soma = soma + 15
		pontos = pontos + 1
	elif(k == 3):
		k = int(input("qual a posicao do jogador: ")
		soma = soma + 10
		pontos = pontos + 1
	elif(k>=4 and k<=11):
		k = int(input("qual a posicao do jogador: ")
		soma = soma + (11-k)
		pontos = pontos + 1
print(soma)
-- ERROR:
File "XXXX", line 7
    soma = soma + 20
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:44:38) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	elif(k == 2):
		k = int(input("qual a posicao do jogador: ")
		soma = soma + 15
		pontos = pontos + 1
	elif(k == 3):
		k = int(input("qual a posicao do jogador: ")
		soma = soma + 10
		pontos = pontos + 1
	elif(k>=4 and k<=11):
		k = int(input("qual a posicao do jogador: ")
		soma = soma + (11-k)
		pontos = pontos + 1
print(soma)
-- ERROR:
File "XXXX", line 10
    soma = soma + 15
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:46:21) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	elif(k == 2):
		while(k!=0):
		k = int(input("qual a posicao do jogador: ")
		soma = soma + 15
		pontos = pontos + 1
	elif(k == 3):
		k = int(input("qual a posicao do jogador: ")
		soma = soma + 10
		pontos = pontos + 1
	elif(k>=4 and k<=11):
		k = int(input("qual a posicao do jogador: ")
		soma = soma + (11-k)
		pontos = pontos + 1
print(soma)
-- ERROR:
File "XXXX", line 10
    k = int(input()
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:46:31) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	elif(k == 2):
		while(k!=0):
			k = int(input("qual a posicao do jogador: ")
			soma = soma + 15
			pontos = pontos + 1
	elif(k == 3):
		k = int(input("qual a posicao do jogador: ")
		soma = soma + 10
		pontos = pontos + 1
	elif(k>=4 and k<=11):
		k = int(input("qual a posicao do jogador: ")
		soma = soma + (11-k)
		pontos = pontos + 1
print(soma)
-- ERROR:
File "XXXX", line 11
    soma = soma + 15
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:47:35) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	elif(k == 2):
			k = int(input("qual a posicao do jogador: ")
			soma = soma + 15
			pontos = pontos + 1
	elif(k == 3):
		k = int(input("qual a posicao do jogador: ")
		soma = soma + 10
		pontos = pontos + 1
	elif(k>=4 and k<=11):
		k = int(input("qual a posicao do jogador: ")
		soma = soma + (11-k)
		pontos = pontos + 1
print(soma)
-- ERROR:
File "XXXX", line 10
    soma = soma + 15
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:47:46) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1)
		soma = soma + 20
		pontos = pontos + 1
	elif(k == 2):
			k = int(input("qual a posicao do jogador: ")
			soma = soma + 15
			pontos = pontos + 1
	elif(k == 3):
		k = int(input("qual a posicao do jogador: ")
		soma = soma + 10
		pontos = pontos + 1
	elif(k>=4 and k<=11):
		k = int(input("qual a posicao do jogador: ")
		soma = soma + (11-k)
		pontos = pontos + 1
print(soma)
-- ERROR:
File "XXXX", line 5
    if(k == 1)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:50:19) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1)
		soma = soma + 20
		pontos = pontos + 1
	elif(k == 2):
			soma = soma + 15
			pontos = pontos + 1
	elif(k == 3):
		soma = soma + 10
		pontos = pontos + 1
	elif(k>=4 and k<=11):
		soma = soma + (11-k)
		pontos = pontos + 1
	k = int(input("digite o valor de k: "))		
print(soma)
-- ERROR:
File "XXXX", line 5
    if(k == 1)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:50:28) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	elif(k == 2):
			soma = soma + 15
			pontos = pontos + 1
	elif(k == 3):
		soma = soma + 10
		pontos = pontos + 1
	elif(k>=4 and k<=11):
		soma = soma + (11-k)
		pontos = pontos + 1
	k = int(input("digite o valor de k: "))		
print(soma)
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:51:03) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	elif(k == 2):
			soma = soma + 15
			pontos = pontos + 1
	elif(k == 3):
		soma = soma + 10
		pontos = pontos + 1
	elif(k>=4 and k<=11):
		soma = soma + (11-k)
		pontos = pontos + 1
	k = int(input("qual a posicao do jogador: "))		
print(soma)
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:51:26) 
-- CODE:
k = int(input("qual a posicao do jogador: "))
pontos = 0
soma = 0
while(k != 0):
	if(k == 1):
		soma = soma + 20
		pontos = pontos + 1
	elif(k == 2):
			soma = soma + 15
			pontos = pontos + 1
	elif(k == 3):
		soma = soma + 10
		pontos = pontos + 1
	elif(k>=4 and k<=11):
		soma = soma + (11-k)
		pontos = pontos + 1
	k = int(input("qual a posicao do jogador: "))		
print(soma)
-- EXECUTION TIME:
0.143985
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
73
---- user output:
73
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
135
---- user output:
135
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
